--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,15 +4,20 @@ on:
   push:
     branches: [ master ]
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.targets.os }}
+    strategy:
+      matrix:
+        targets: 
+          - os: ubuntu-latest
+            target: "x86_64-unknown-linux-gnu"
+          - os: macOS-latest
+            target: "x86_64-unknown-linux-gnu"
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          target: ${{ matrix.targets.target }}
       - run: cargo build --release
