--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,18 +6,15 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.targets.os }}
-    strategy:
-      matrix:
-        targets: 
-          - os: ubuntu-latest
-            target: "x86_64-unknown-linux-gnu"
-          - os: macOS-latest
-            target: "x86_64-unknown-linux-gnu"
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: ${{ matrix.targets.target }}
-      - run: cargo build --release
+          target: armv7-unknown-linux-gnueabihf
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --target armv7-unknown-linux-gnueabihf --release
