--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,11 +7,12 @@ on:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         target: 
           - x86_64-apple-darwin
           - x86_64-unknown-linux-gnu	
-          - aarch64-unknown-linux-gnu
+          - armv7-unknown-linux-gnueabihf	
         os:
           - ubuntu-latest
     runs-on: ${{ matrix.os }}
@@ -21,6 +22,7 @@ jobs:
         with:
           toolchain: stable
           target: ${{ matrix.target }}
+          override: true
       - uses: actions-rs/cargo@v1
         with:
           use-cross: true
