--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,11 +10,13 @@ jobs:
       fail-fast: false
       matrix:
         target: 
-          - x86_64-apple-darwin
           - x86_64-unknown-linux-gnu	
           - armv7-unknown-linux-gnueabihf	
         os:
           - ubuntu-latest
+        include:
+          - os: maxos-latest
+            target: x86_64-apple-darwin
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
