--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,6 +39,8 @@ jobs:
   release:
     needs: [build]
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
       - name: Create Release
         id: create_release
@@ -69,7 +71,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          upload_url: ${{needs.release.outputs.upload_url}}
           asset_path: ./wemo-exporter-${{ matrix.target }}.zip
           asset_name: ./wemo-exporter-${{ matrix.target }}.zip
           asset_content_type: application/zip
