--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,13 +4,29 @@ on:
     branches: [ master ]
 
 jobs:
+  release:
+    runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.sha }}
+          release_name: Draft Release
+          draft: true
+          prerelease: true
   build:
+    needs: [release]
     strategy:
       fail-fast: false
       matrix:
         target: 
           - x86_64-unknown-linux-gnu	
-          - armv7-unknown-linux-gnueabihf	
+          - aarch64-unknown-linux-gnu
         os:
           - ubuntu-latest
         include:
@@ -31,40 +47,6 @@ jobs:
           args: --target ${{ matrix.target }} --release
       - name: Archive
         run: zip wemo-exporter-${{ matrix.target }}.zip -j ./target/${{ matrix.target }}/release/wemo-exporter
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: wemo-exporter 
-          path: wemo-exporter-${{ matrix.target }}.zip
-  release:
-    needs: [build]
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
-          draft: true
-          prerelease: true
-  upload:
-    needs: [release]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target:
-          - x86_64-apple-darwin
-          - x86_64-unknown-linux-gnu	
-          - armv7-unknown-linux-gnueabihf	
-    steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: wemo-exporter
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
@@ -73,5 +55,5 @@ jobs:
         with:
           upload_url: ${{needs.release.outputs.upload_url}}
           asset_path: ./wemo-exporter-${{ matrix.target }}.zip
-          asset_name: ./wemo-exporter-${{ matrix.target }}.zip
+          asset_name: wemo-exporter-${{ matrix.target }}.zip
           asset_content_type: application/zip
