--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
+serde = "1.0"
 yaserde = "0.8.0"
 yaserde_derive = "0.8.0"
+config = "0.13"
