--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,10 +4,10 @@ on:
     branches: [ master ]
 
 jobs:
-  release:
+  devrelease:
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
+      upload: ${{steps.get_upload_url.outputs.url}}
     steps:
       - name: Move Tag
         uses: richardsimko/update-tag@v1
@@ -15,18 +15,22 @@ jobs:
           tag_name: dev 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - uses: octokit/request-action@v2.x
+        id: get_latest_release
+        with:
+          route: GET /repos/:repository/releases/latest
+          repository: ${{ github.repository }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.sha }}
-          release_name: Draft Release
-          draft: true
-          prerelease: true
+      - name: get upload url
+        id: get_upload_url
+        run: |
+          url=$(echo "$response" | jq -r '.upload_url')
+          echo "::set-output name=url::$url"
+        env: 
+          response:  ${{ steps.get_latest_release.outputs.data }}
   build:
-    needs: [release]
+    needs: [devrelease]
     strategy:
       fail-fast: false
       matrix:
@@ -54,12 +58,11 @@ jobs:
       - name: Archive
         run: zip wemo-exporter-${{ matrix.target }}.zip -j ./target/${{ matrix.target }}/release/wemo-exporter
       - name: Upload Release Asset
-        id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{needs.release.outputs.upload_url}}
+          upload_url: ${{needs.devrelease.outputs.upload}}
           asset_path: ./wemo-exporter-${{ matrix.target }}.zip
           asset_name: wemo-exporter-${{ matrix.target }}.zip
           asset_content_type: application/zip
