--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3"
 hyper = { version = "0.14", features = ["full"] }
+hyper-timeout = "0.4"
 tokio = { version = "1", features = ["full"] }
 serde = "1.0"
 yaserde = "0.8.0"
