--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,34 +4,18 @@ on:
     branches: [ master ]
 
 jobs:
-  devrelease:
+  move:
     runs-on: ubuntu-latest
     outputs:
       upload: ${{steps.get_upload_url.outputs.url}}
     steps:
-      - run: hub api /repos/7imbrook/wemo-exporter/releases/tags/dev | jq '.assets[].url' -r | xargs -n1 hub api -X DELETE
       - name: Move Tag
         uses: richardsimko/update-tag@v1
         with:
           tag_name: dev 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: octokit/request-action@v2.x
-        id: get_latest_release
-        with:
-          route: GET /repos/:repository/releases/tags/dev
-          repository: ${{ github.repository }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Get upload url for release tagged dev
-        id: get_upload_url
-        run: |
-          url=$(echo "$response" | jq -r '.upload_url')
-          echo "::set-output name=url::$url"
-        env: 
-          response: ${{ steps.get_latest_release.outputs.data }}
   build:
-    needs: [devrelease]
     strategy:
       fail-fast: false
       matrix:
@@ -45,6 +29,13 @@ jobs:
             target: x86_64-apple-darwin
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: octokit/request-action@v2.x
+        id: dev_release
+        with:
+          route: GET /repos/7imbrook/wemo-exporter/releases/tags/dev
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo ${{steps.dev_release.output}}
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -58,12 +49,12 @@ jobs:
           args: --target ${{ matrix.target }} --release
       - name: Archive
         run: zip wemo-exporter-${{ matrix.target }}.zip -j ./target/${{ matrix.target }}/release/wemo-exporter
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{needs.devrelease.outputs.upload}}
-          asset_path: ./wemo-exporter-${{ matrix.target }}.zip
-          asset_name: wemo-exporter-${{ matrix.target }}.zip
-          asset_content_type: application/zip
+      # - name: Upload Release Asset
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{needs.devrelease.outputs.upload}}
+      #     asset_path: ./wemo-exporter-${{ matrix.target }}.zip
+      #     asset_name: wemo-exporter-${{ matrix.target }}.zip
+      #     asset_content_type: application/zip
