--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,7 +35,7 @@ jobs:
           route: GET /repos/7imbrook/wemo-exporter/releases/tags/dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: echo '${{steps.dev_release.outputs.data}}' | jq '.assets'
+      - run: echo '${{steps.dev_release.outputs.data}}' > release.json
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -49,12 +49,15 @@ jobs:
           args: --target ${{ matrix.target }} --release
       - name: Archive
         run: zip wemo-exporter-${{ matrix.target }}.zip -j ./target/${{ matrix.target }}/release/wemo-exporter
-      # - name: Upload Release Asset
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{needs.devrelease.outputs.upload}}
-      #     asset_path: ./wemo-exporter-${{ matrix.target }}.zip
-      #     asset_name: wemo-exporter-${{ matrix.target }}.zip
-      #     asset_content_type: application/zip
+      - name: Get Release
+        id: dev
+        run: echo "::set-ouput upload_url=$(cat release.json | jq '.upload_url' )"
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{steps.dev.outputs.upload_url}}
+          asset_path: ./wemo-exporter-${{ matrix.target }}.zip
+          asset_name: wemo-exporter-${{ matrix.target }}.zip
+          asset_content_type: application/zip
